Update: 개인정보 수정 기능 구현

--- a/src/views/account-info/account-info.html
+++ b/src/views/account-info/account-info.html
@@ -68,7 +68,12 @@
           <div class="field">
             <label class="label">전화번호</label>
             <div class="control">
-              <input type="text" id="phoneNumberInput" autocomplete="off" />
+              <input
+                type="tel"
+                id="phoneNumberInput"
+                maxlength="13"
+                autocomplete="off"
+              />
               <!-- <label class="switch">
                 <input type="checkbox" id="nameToggle" />
                 <span class="slider round"></span>
