--- a/src/views/order/order.html
+++ b/src/views/order/order.html
@@ -124,7 +124,7 @@
             >
               <div class="modal-background"></div>
               <div class="modal-content box" style="text-align: center">
-                결제가 완료되었습니다. 주문확인페이지로 이동합니다.
+                결제가 완료되었습니다. 주문조회 화면으로 이동합니다.
               </div>
               <!-- <button class="modal-close is-large" aria-label="close"></button> -->
             </div>
