style: order-modal.js

--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -65,7 +65,7 @@
               id="btnPurchase"
               class="button is-danger is-outlined px-6 py-5"
             >
-              결제하기
+              주문하기
             </button>
           </a>
         </div>
