--- a/src/views/order/order.html
+++ b/src/views/order/order.html
@@ -26,6 +26,7 @@
 
     <link rel="stylesheet" href="./order.css" />
     <script src="order.js" type="module" defer></script>
+    <script src="order-modal.js" type="module" defer></script>
   </head>
 
   <body class="cartOrder">
