--- a/src/views/account-info/account-info.css
+++ b/src/views/account-info/account-info.css
@@ -1,2 +1,15 @@
 @charset "utf-8";
 @import '../styles/reset.css';
+
+/* 모달(Modal) 창 관련 */
+.modal-content button.delete {
+  position: absolute;
+  right: 3px;
+  top: 3px;
+  background: transparent;
+}
+
+.modal-content button.delete::before,
+.modal-content button.delete::after {
+  background-color: black;
+}
