Update: 개인 정보 수정 기능 구현 완료

--- a/src/views/account-info/account-info.html
+++ b/src/views/account-info/account-info.html
@@ -46,20 +46,20 @@
             <label class="label" for="nameInput">이름</label>
             <div class="control">
               <input type="text" id="nameInput" autocomplete="off" />
-              <!-- <label class="switch">
+              <label class="switch">
                 <input type="checkbox" id="nameToggle" />
                 <span class="slider round"></span>
-              </label> -->
+              </label>
             </div>
           </div>
           <div class="field">
             <label class="label" for="passwordInput">새 비밀번호</label>
             <div class="control">
               <input type="password" id="passwordInput" autocomplete="off" />
-              <!-- <label class="switch">
-                <input type="checkbox" id="nameToggle" />
+              <label class="switch">
+                <input type="checkbox" id="passwordToggle" />
                 <span class="slider round"></span>
-              </label> -->
+              </label>
             </div>
           </div>
           <div class="field">
@@ -83,10 +83,10 @@
                 maxlength="13"
                 autocomplete="off"
               />
-              <!-- <label class="switch">
-                <input type="checkbox" id="nameToggle" />
+              <label class="switch">
+                <input type="checkbox" id="phoneNumberToggle" />
                 <span class="slider round"></span>
-              </label> -->
+              </label>
             </div>
           </div>
           <button
