Refactor: 주석 작업

--- a/src/views/account-info/account-info.html
+++ b/src/views/account-info/account-info.html
@@ -93,7 +93,7 @@
             class="button button-submit is-info is-fullwidth js-modal-trigger"
             id="saveButton"
           >
-            저장하기
+            수정하기
           </button>
           <!-- modal -->
           <div id="modal" class="modal">
@@ -118,7 +118,7 @@
                   id="saveCompleteButton"
                   aria-label="close"
                 >
-                  저장 완료하기
+                  수정 완료하기
                 </button>
               </div>
             </div>
