--- a/src/views/account-info/account-info.html
+++ b/src/views/account-info/account-info.html
@@ -33,19 +33,34 @@
     <div data-include-path="../components/header.html"></div>
     <!-- 바디 -->
     <main role="main" id="mainWrap" class="container is-max-desktop">
-      <h2 id="userEmail">개인 정보 관리</h2>
+      <h2
+        id="userEmail"
+        class="title mt-6 mb-6 has-text-grey-dark has-text-centered"
+      >
+        개인 정보 관리
+      </h2>
       <div class="form-container">
         <form id="infoForm" class="box form-box">
           <div class="field">
-            <label>이메일</label>
+            <label class="label" for="emailInput">이메일</label>
             <div class="control">
-              <input type="text" id="emailInput" disabled />
+              <input
+                type="text"
+                class="input is-normal"
+                id="emailInput"
+                disabled
+              />
             </div>
           </div>
           <div class="field">
             <label class="label" for="nameInput">이름</label>
             <div class="control">
-              <input type="text" id="nameInput" autocomplete="off" />
+              <input
+                type="text"
+                class="input is-normal"
+                id="nameInput"
+                autocomplete="off"
+              />
               <label class="switch">
                 <input type="checkbox" id="nameToggle" />
                 <span class="slider round"></span>
@@ -55,7 +70,12 @@
           <div class="field">
             <label class="label" for="passwordInput">새 비밀번호</label>
             <div class="control">
-              <input type="password" id="passwordInput" autocomplete="off" />
+              <input
+                type="password"
+                class="input is-normal"
+                id="passwordInput"
+                autocomplete="off"
+              />
               <label class="switch">
                 <input type="checkbox" id="passwordToggle" />
                 <span class="slider round"></span>
@@ -69,6 +89,7 @@
             <div class="control">
               <input
                 type="password"
+                class="input is-normal"
                 id="passwordConfirmInput"
                 autocomplete="off"
               />
@@ -79,6 +100,7 @@
             <div class="control">
               <input
                 type="tel"
+                class="input is-normal"
                 id="phoneNumberInput"
                 maxlength="13"
                 autocomplete="off"
@@ -90,7 +112,7 @@
             </div>
           </div>
           <button
-            class="button button-submit is-info is-fullwidth js-modal-trigger"
+            class="button is-outlined button-submit is-info is-fullwidth js-modal-trigger mt-6 is-large"
             id="saveButton"
           >
             수정하기
@@ -99,13 +121,15 @@
           <div id="modal" class="modal">
             <div class="modal-background" id="modalBackground"></div>
             <div class="modal-content">
-              <button
-                class="delete is-large"
-                id="modalCloseButton"
-                aria-label="close"
-              ></button>
               <div class="box">
-                <p class="mb-3">현재 비밀번호를 입력해 주세요.</p>
+                <div class="is-flex">
+                  <p class="mb-3">현재 비밀번호를 입력해 주세요.</p>
+                  <button
+                    class="delete is-large"
+                    id="modalCloseButton"
+                    aria-label="close"
+                  ></button>
+                </div>
                 <input
                   type="password"
                   class="input is-link mb-3"
@@ -113,13 +137,15 @@
                   placeholder
                   autocomplete="on"
                 />
-                <button
-                  class="button is-link mt-5"
-                  id="saveCompleteButton"
-                  aria-label="close"
-                >
-                  수정 완료하기
-                </button>
+                <div class="is-flex">
+                  <button
+                    class="button is-outlined is-link mt-1 ml-auto"
+                    id="saveCompleteButton"
+                    aria-label="close"
+                  >
+                    수정 완료하기
+                  </button>
+                </div>
               </div>
             </div>
           </div>
