--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -18,6 +18,7 @@
       src="https://kit.fontawesome.com/9daa42bcef.js"
       crossorigin="anonymous"
     ></script>
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 
     <link rel="stylesheet" href="./register.css" />
     <script src="./register.js" type="module"></script>
