--- a/src/views/Error-404/error-404.html
+++ b/src/views/Error-404/error-404.html
@@ -33,7 +33,7 @@
   </head>
   <body class="error404">
     <!-- 헤더 -->
-    <div data-include-path="../components/header.html"></div>
+    <!-- <div data-include-path="../components/header.html"></div> -->
 
     <!-- 바디 -->
     <main role="main" id="mainWrap" class="container">
