--- a/src/views/Error-404/error-404.css
+++ b/src/views/Error-404/error-404.css
@@ -4,7 +4,7 @@
 /* description404 */
 .error404 .description404 {
   margin-bottom: 20px;
-  padding-top: 50px;
+  padding-top: 60px;
 
   color: rgba(182, 182, 182, 0.7);
 }
@@ -47,7 +47,7 @@
 }
 
 .error404 .besideIframe {
-  background: url('../../images/milkway.png') no-repeat content-box;
+  /* background: url('../../images/milkway.png') no-repeat content-box; */
   width: 600px;
 }
 
