--- a/src/views/error/not-found.html
+++ b/src/views/error/not-found.html
@@ -28,17 +28,17 @@
     />
 
     <!-- 커스텀 css, js -->
-    <link rel="stylesheet" href="./error-404.css" />
-    <script src="error-404.js" type="module" defer></script>
+    <link rel="stylesheet" href="./not-found.css" />
+    <script src="not-found.js" type="module" defer></script>
   </head>
-  <body class="error404">
+  <body class="error">
     <!-- 헤더 -->
     <!-- <div data-include-path="../components/header.html"></div> -->
 
     <!-- 바디 -->
     <main role="main" id="mainWrap" class="container">
-      <section class="description404">
-        <div class="description404Inner">
+      <section class="description">
+        <div class="descriptionInner">
           <div class="descripLeft">
             <h2>원하시는 페이지를 찾을 수 없습니다.</h2>
             <p>찾으려는 페이지의 주소가 잘못 입력되었거나,</p>
@@ -46,7 +46,7 @@
             <p>입력하신 페이지의 주소가 정확한지 다시 한 번 확인해 주세요.</p>
           </div>
           <div class="descripright">
-            <h2 class="txt404">404</h2>
+            <h2 class="txtError">404</h2>
           </div>
         </div>
       </section>
