--- a/src/views/error/not-found.css
+++ b/src/views/error/not-found.css
@@ -1,24 +1,21 @@
 @charset "utf-8";
 @import '../styles/reset.css';
 
-/* body */
-.error {
-}
-
 /* description */
 .error .description {
   margin-bottom: 20px;
-  padding-top: 60px;
+  padding-top: 80px;
 
   color: rgba(182, 182, 182, 0.7);
 }
 
 .error .descriptionInner {
+  text-align: center;
+
   display: grid;
   justify-content: center;
   align-items: center;
-  grid-template-columns: repeat(2, 600px);
-  column-gap: 20px;
+  grid-template-rows: repeat(2, 300px);
 }
 
 .error .description h2 {
@@ -39,73 +36,4 @@
 
   font-size: 20em;
   text-shadow: 1px 1px 1px purple;
-}
-
-/* YouTube */
-.error .contentsSec {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-
-  font-family: 'Noto Serif KR', serif;
-}
-
-.error .besideIframe {
-  /* background: url('../../images/milkway.png') no-repeat content-box; */
-  width: 600px;
-}
-
-.error .besideIframe div {
-  width: 500px;
-  padding: 60px;
-  line-height: 1;
-}
-
-.error .besideIframe p {
-  opacity: 0.6;
-
-  font-size: 2.2em;
-  color: purple;
-  font-weight: 400;
-}
-.error .besideIframe .title {
-  opacity: 0.6;
-  line-height: 2em;
-  filter: drop-shadow(16px 16px 20px red);
-  -webkit-filter: drop-shadow(16px 16px 20px red);
-}
-
-.error .besideIframe p .subText {
-  color: rgb(82, 82, 82);
-  font-size: 28px;
-}
-
-.error .besideIframe .hashTag,
-.error .besideIframe .linkHome {
-  color: gray;
-  font-size: 16px;
-  display: inline-flex;
-}
-
-.error .besideIframe .linkHomeWrap {
-  margin-top: 40px;
-  display: grid;
-  grid-template-columns: 1fr, max-content;
-}
-
-.error .besideIframe .linkHome:hover {
-  color: white;
-  background-color: purple;
-}
-
-.error .besideIframe .linkHome {
-  padding: 8px 10px;
-  border: 1px solid rgba(182, 182, 182, 0.7);
-  border-radius: 8px;
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  -ms-border-radius: 8px;
-  -o-border-radius: 8px;
-
-  justify-self: flex-end;
 }
