--- a/src/views/error/not-found.html
+++ b/src/views/error/not-found.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>로그인</title>
+    <title>not-found</title>
 
     <!-- 아이콘 -->
     <link
@@ -29,7 +29,7 @@
 
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="./not-found.css" />
-    <script src="not-found.js" type="module" defer></script>
+    <script src="./not-found.js" type="module" defer></script>
   </head>
   <body class="error">
     <!-- 헤더 -->
@@ -39,53 +39,20 @@
     <main role="main" id="mainWrap" class="container">
       <section class="description">
         <div class="descriptionInner">
+          <div class="descripright">
+            <h2 class="txtError">404</h2>
+          </div>
           <div class="descripLeft">
             <h2>원하시는 페이지를 찾을 수 없습니다.</h2>
             <p>찾으려는 페이지의 주소가 잘못 입력되었거나,</p>
             <p>주소의 변경 혹은 삭제로 인해 사용하실 수 없습니다.</p>
             <p>입력하신 페이지의 주소가 정확한지 다시 한 번 확인해 주세요.</p>
           </div>
-          <div class="descripright">
-            <h2 class="txtError">404</h2>
-          </div>
         </div>
       </section>
-
-      <!-- YouTube -->
-      <aside class="contentsSec">
-        <iframe
-          title="#"
-          width="600"
-          height="360"
-          src="https://www.youtube.com/embed/CWTwiE15pdY"
-        >
-          <a href="../images/iframe.jpg" target="img">
-            <img src="../images/iframe.jpg" alt="iframe" />
-          </a>
-        </iframe>
-
-        <div class="besideIframe">
-          <div>
-            <p>
-             <span class="title"> GIFT FOR MEMORY</span><br />
-              <span class="subText"
-                >당신의 소중한 사람에게 <br />
-                단 하나뿐인 기억을 선물하세요. <br />
-              </span>
-              <span class="hashTag">
-                #세상에하나뿐인둘만의추억#선물#기억을선물한다<br />#커스텀쥬얼리#기념선물
-              </span>
-              <p class="linkHomeWrap">
-                <span></span>
-                <a href="/" class="linkHome"> 오작뀨 홈 가기 </a>
-              </p>
-            </p>
-          </div>
-        </div>
-      </aside>
     </main>
 
     <!-- 푸터 -->
-    <div data-include-path="../components/footer.html"></div>
+    <!-- <div data-include-path="../components/footer.html"></div> -->
   </body>
 </html>
