--- a/src/views/error/error.html
+++ b/src/views/error/error.html
@@ -28,8 +28,8 @@
     />
 
     <!-- 커스텀 css, js -->
-    <link rel="stylesheet" href="./not-found.css" />
-    <script src="./not-found.js" type="module" defer></script>
+    <link rel="stylesheet" href="./error.css" />
+    <script src="./error.js" type="module" defer></script>
   </head>
   <body class="error">
     <!-- 헤더 -->
@@ -49,6 +49,10 @@
             <p>입력하신 페이지의 주소가 정확한지 다시 한 번 확인해 주세요.</p>
           </div>
         </div>
+
+        <a href="/" class="linkHomeWrap">
+          <button type="button" class="linkHome">오작뀨 홈 가기</button>
+        </a>
       </section>
     </main>
 
