--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>장바구니</title>
-    <!-- 아이콘 -->
+
     <link
       rel="icon"
       type="image/png"
