--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,7 +11,6 @@
       sizes="16x16"
       href="../images/facon.ico"
     />
-
 
     <script
       defer
@@ -28,7 +27,7 @@
   <body>
     <!-- 헤더 -->
    
-    <div data-include-path="../components/header.html"></div>
+    <div id="header" data-include-path="../components/header.html"></div>
 
 
     <!-- 비주얼 배너 -->
