--- a/src/views/register/register.css
+++ b/src/views/register/register.css
@@ -38,7 +38,7 @@
   outline: none;
 }
 
-.paddingContent .textLeft {
+.textLeft {
   text-align: left;
   padding: 10px 0;
   font-size: 14px;
@@ -55,4 +55,12 @@
   font-size: 1.2em;
   cursor: pointer;
   margin-top: 40px;
+}
+
+.addressSection {
+  margin: 1em 0;
+}
+
+.addressSection div {
+  display: flex;
 }
