--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -33,7 +33,8 @@
         <h2><strong>이메일 간편 가입</strong></h2>
 
         <form class="formWrap" id="registerUserForm">
-          <div class="paddingContent">
+          <!-- 이메일 -->
+          <div>
             <p class="textLeft"><label for="emailInput">이메일</label></p>
             <div>
               <input
@@ -46,7 +47,8 @@
             </div>
           </div>
 
-          <div class="paddingContent">
+          <!-- 이름 -->
+          <div>
             <p class="textLeft"><label for="fullNameInput">이름</label></p>
             <div>
               <input
@@ -59,7 +61,8 @@
             </div>
           </div>
 
-          <div class="paddingContent">
+          <!-- 비밀번호 -->
+          <div>
             <p class="textLeft"><label for="passwordInput">비밀번호</label></p>
             <div>
               <input
@@ -72,7 +75,8 @@
             </div>
           </div>
 
-          <div class="paddingContent">
+          <!-- 비밀번호 확인 -->
+          <div>
             <p class="textLeft">
               <label for="passwordConfirmInput">비밀번호 확인</label>
             </p>
@@ -87,7 +91,29 @@
             </div>
           </div>
 
-          <div class="paddingContent">
+          <!-- 주소 -->
+          <div class="addressSection">
+            <p class="textLeft">
+              <label for="addressInput">주소</label>
+            </p>
+            <div class="postalCodeWrapper">
+              <input class="input" id="postalCodeInput" type="text" readonly />
+              <button id="searchAddressButton">주소 찾기</button>
+            </div>
+          </div>
+          <div class="addressSection">
+            <div>
+              <input class="input" id="addressInput" type="text" readonly />
+            </div>
+          </div>
+          <div class="addressSection">
+            <div>
+              <input class="input" id="addressDetailInput" type="text" />
+            </div>
+          </div>
+
+          <!-- 휴대폰 번호 -->
+          <div class="addressSection">
             <p class="textLeft">
               <label for="phonNumberInput">휴대폰 번호</label>
             </p>
@@ -103,7 +129,8 @@
             </div>
           </div>
 
-          <button class="submitBtn" id="submitButton">회원가입하기</button>
+          <!-- 회원가입 버튼 -->
+          <button class="submitBtn" id="submitButton">회원 가입하기</button>
         </form>
       </div>
 
