Category Move Update

--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -26,8 +26,7 @@
 
   <body>
     <!-- 헤더 -->
-   
-    <div id="header" data-include-path="../components/header.html"></div>
+    <div id="header"></div>
 
 
     <!-- 비주얼 배너 -->
@@ -93,7 +92,7 @@
 
 
     <!-- 푸터 -->
-    <div data-include-path="../components/footer.html"></div>
+    <div id="footer"></div>
 
   </body>
 </html>
