--- a/src/views/components/header.html
+++ b/src/views/components/header.html
@@ -83,12 +83,8 @@
         </div>
 
         <div class="gnb">
-          <ul>
-            <li><a href="#">ABOUT US</a></li>
-            <li><a href="#">팔찌</a></li>
-            <li><a href="#">반지</a></li>
-            <li><a href="#">목걸이</a></li>
-            <li><a href="#">내 탄생석은?</a></li>
+          <ul class="gnbContents">
+           
           </ul>
         </div>
       </nav>
