--- a/src/views/product/product.html
+++ b/src/views/product/product.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>제품 상세 페이지</title>
+    <title>카테고리 제품 페이지</title>
 
-    <link rel="stylesheet" href="../styles/reset.css">
+    <!-- <link rel="stylesheet" href="../styles/reset.css"> -->
 
 </head>
 <body>
