Fix: Merge 이후 로직 충돌 해결 및 오류 수정

--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -30,7 +30,7 @@
 
   <body>
     <!-- 헤더 -->
-    <div data-include-path="../components/header.html"></div>
+    <div id="header"></div>
 
     <main role="main" id="mainWrap" class="container is-max-desktop">
       <section class="title-sub mt-6">
@@ -81,6 +81,6 @@
     </main>
 
     <!-- 푸터 -->
-    <div data-include-path="../components/footer.html"></div>
+    <div id="footer"></div>
   </body>
 </html>
