--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <!-- 헤더 -->
-    <div data-include-path="../components/header.html"></div>
+    <div id="header"></div>
 
     <!-- 로그인 폼(Form) -->
     <section id="loginContainer">
