--- a/src/views/order-view/order-view.html
+++ b/src/views/order-view/order-view.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <!-- 헤더 -->
-    <div data-include-path="../components/header.html"></div>
+    <div id="header"></div>
     <!-- 바디 -->
     <main role="main" id="mainWrap" class="container is-max-desktop">
       <section id="orderContainer">
@@ -50,6 +50,6 @@
         </div>
     </main>
     <!-- 푸터 -->
-    <div data-include-path="../components/footer.html"></div>
+    <div id="footer"></div>
   </body>
 </html>
