--- a/src/views/order/order.html
+++ b/src/views/order/order.html
@@ -44,7 +44,7 @@
     onunload=""
   >
     <!-- 헤더 -->
-    <div data-include-path="../components/header.html"></div>
+    <div id="header"></div>
 
     <main role="main" id="mainWrap" class="container is-max-desktop">
       <div class="mainInner px-6 box mt-6">
@@ -160,6 +160,6 @@
     </main>
 
     <!-- 푸터 -->
-    <div data-include-path="../components/footer.html"></div>
+    <div id="footer"></div>
   </body>
 </html>
