--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -1,32 +1,27 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>제품 상세 페이지</title>
 
-    <link rel="stylesheet" href="./product-detail.css">
+    <link rel="stylesheet" href="./product-detail.css" />
 
     <script src="product-detail.js" type="module"></script>
-</head>
-<body>
-    <div data-include-path="../../components/header.html"></div>
+  </head>
+  <body>
+    <!-- 헤더 -->
+    <div id="header"></div>
 
     <section class="container">
-        <article class="detailWrap">
-            <div class="productImg">
+      <article class="detailWrap">
+        <div class="productImg"></div>
 
-            </div>
-
-            <div class="productDetail">
-
-            </div>
-        </article>    
+        <div class="productDetail"></div>
+      </article>
     </section>
- 
 
-    <div data-include-path="../../components/footer.html"></div>
-
-    
-</body>
+    <!-- 푸터 -->
+    <div id="footer"></div>
+  </body>
 </html>
