--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <!-- 헤더 -->
-    <div data-include-path="../components/header.html"></div>
+    <div id="header"></div>
 
     <!-- 회원가입 폼(Form) -->
     <section id="signupContainer">
@@ -133,8 +133,8 @@
           <button class="submitBtn" id="submitButton">회원 가입하기</button>
         </form>
       </div>
-
-      <div data-include-path="../components/footer.html"></div>
+      <!-- 푸터 -->
+      <div id="footer"></div>
     </section>
   </body>
 </html>
