--- a/src/views/account-info/account-info.html
+++ b/src/views/account-info/account-info.html
@@ -31,7 +31,8 @@
   </head>
   <body>
     <!-- 헤더 -->
-    <div data-include-path="../components/header.html"></div>
+    <div id="header"></div>
+
     <!-- 바디 -->
     <main role="main" id="mainWrap" class="container is-max-desktop">
       <h2
@@ -198,6 +199,6 @@
       </div>
     </main>
     <!-- 푸터 -->
-    <div data-include-path="../components/footer.html"></div>
+    <div id="footer"></div>
   </body>
 </html>
