--- a/src/views/account/account.html
+++ b/src/views/account/account.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <!-- 헤더 -->
-    <div data-include-path="../components/header.html"></div>
+    <div id="header"></div>
     <!-- 바디 -->
     <main role="main" id="mainWrap" class="container is-max-desktop">
       <section class="accountWrapper">
@@ -52,6 +52,6 @@
       </section>
     </main>
     <!-- 푸터 -->
-    <div data-include-path="../components/footer.html"></div>
+    <div id="footer"></div>
   </body>
 </html>
