--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -19,7 +19,7 @@
     ></script>
 
 
-    <link rel="stylesheet" href="./css/home.css" />
+    <link rel="stylesheet" href="home.css" />
     <script src="home.js" type="module"></script>
    
   </head>
