--- a/src/views/account/account.html
+++ b/src/views/account/account.html
@@ -46,7 +46,7 @@
             <li class="img2"><a href="/cart">장바구니</a></li>
             <!-- 개인 정보 페이지 접근 요청 시 비밀번호 확인하는 기능 추가 필요 -->
             <li class="img3"><a href="/info">개인 정보</a></li>
-            <li class="img4"><a href="">회원탈퇴</a></li>
+            <li class="img4"><a href="/account/signout">회원탈퇴</a></li>
           </ul>
         </div>
       </section>
