Header and  Category Update

--- a/src/views/components/header.html
+++ b/src/views/components/header.html
@@ -12,7 +12,6 @@
       href="../images/facon.ico"
     />
 
-    <link rel="stylesheet" type="style" href="../styles/reset.css"/>
 
     <style>
       /* 헤더 레이아웃 */
@@ -43,6 +42,12 @@
       .util ul {
         display: flex;
         gap: 20px;
+      }
+
+      .util ul .logout{
+        color: #000;
+        font-weight: 600;
+        cursor: pointer;
       }
 
       .util ul li a {
@@ -85,11 +90,8 @@
           <h1><a href="/">오작뀨</a></h1>
 
           <div class="util">
-            <ul>
-              <li><a href="/login">로그인</a></li>
-              <li><a href="/register">회원가입</a></li>
-              <li><a href="/cart">장바구니</a></li>
-              <li><a href="/account">내 정보</a></li>
+            <ul class="utilContents">
+
             </ul>
           </div>
         </div>
