--- a/src/views/product/product.html
+++ b/src/views/product/product.html
@@ -72,14 +72,12 @@
 <body>
     <div id="header"></div>
 
-    
-    <section class="container">
-        <div id="product">
-            여기에 상품리스트를 불러옵니다.
-        </div>
-        
-        
-    </section>
+
+    <section class="categoryWrap">
+        <article class="productWrap">
+          <ul class="product"></ul>
+        </article>
+      </section>
     
     
     <div id="footer"></div>
