--- a/src/views/birthstone/birthstone.html
+++ b/src/views/birthstone/birthstone.html
@@ -36,7 +36,7 @@
   </head>
   <body class="error">
     <!-- 헤더 -->
-    <div data-include-path="../components/header.html"></div>
+    <div id="header"></div>
 
     <!-- 바디 -->
     <main role="main" id="mainWrap" class="container">
@@ -189,8 +189,6 @@
       </div>
     </main>
 
-    <!-- 푸터 -->
-    <div data-include-path="../components/footer.html"></div>
   </body>
   <script>
     //slides
