--- a/src/views/product/product.html
+++ b/src/views/product/product.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>카테고리 제품 페이지</title>
 
+    <link rel="stylesheet" href="./product.css">
 
-    <!-- css 안먹습니다. ㅡㅡ -->
-    <style>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/images/facon.ico"
+    />
+
+    <!-- css 안먹나? -->
+    <!-- <style>
         @import url("https://fonts.googleapis.com/css2?family=Single+Day&family=Stick+No+Bills:wght@400;500;700&display=swap");
         @font-face {
             font-family: "OKDDUNG";
@@ -65,7 +73,7 @@
             line-height: 1;
         }
        
-    </style>
+    </style> -->
 
 </head>
 
@@ -74,10 +82,16 @@
 
 
     <section class="categoryWrap">
-        <article class="productWrap">
-          <ul class="product"></ul>
+        <div class="categoryTitle">
+            <h1>14k 팔찌</h1>
+        </div>
+
+        <article>
+            <ul class="product"> 
+            </ul>
         </article>
-      </section>
+        
+    </section>
     
     
     <div id="footer"></div>
