--- a/src/views/components/header.html
+++ b/src/views/components/header.html
@@ -37,6 +37,8 @@
       .headerTop h1 {
         font-size: 2em;
         color: #000;
+        font-family: "OKDDUNG";
+
         }
 
       .util ul {
@@ -55,6 +57,9 @@
         font-weight: 600;
       }
 
+      .util ul li a:hover{
+        color: coral;
+      }
       
 
       /* GNB */
