--- a/src/views/product/product.html
+++ b/src/views/product/product.html
@@ -88,6 +88,9 @@
         <div>
             <a href="http://localhost:3000/product/add">상품 추가하기</a>
         </div>
+        <div>
+            <a href="http://localhost:3000/product/add">상품 추가하기</a>
+        </div>
 
         <article>
             <ul class="product"> 
