--- a/src/views/about-us/about-us.html
+++ b/src/views/about-us/about-us.html
@@ -84,17 +84,16 @@
             <div class="card">
               <h3 class="ftSerif name">유의석</h3>
               <p class="tech">Back-end</p>
-
               <div class="description">
                 <p>Lorem ipsum dolor sit amet</p>
                 <p></p>
                 <p></p>
               </div>
             </div>
+
             <div class="card">
               <h3 class="ftSerif name">김진영</h3>
               <p class="tech">Front-end</p>
-
               <div class="description">
                 <p>Lorem ipsum dolor sit amet</p>
                 <p></p>
@@ -102,10 +101,10 @@
                 <p></p>
               </div>
             </div>
+
             <div class="card">
               <h3 class="ftSerif name">이다노</h3>
               <p class="tech">Front-end</p>
-
               <div class="description">
                 <p>Lorem ipsum dolor sit amet</p>
                 <p></p>
@@ -113,18 +112,19 @@
                 <p></p>
               </div>
             </div>
+
             <div class="card">
               <h3 class="ftSerif name">이유정</h3>
               <p class="tech">Front-end</p>
-
               <div class="description">
-                <p>즐거운 작업이었습니다.</p>
+                <p>재밌는 작업이 많은 프로젝트였습니다.</p>
+                <p>모두 수고하셨습니다!!</p>
               </div>
             </div>
+
             <div class="card">
               <h3 class="ftSerif name">정지헌</h3>
               <p class="tech">Back-end</p>
-
               <div class="description">
                 <p>Lorem ipsum dolor sit amet</p>
                 <p></p>
