--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="../images/facon.ico"
+      href="/images/facon.ico"
     />
 
     <!-- bulma css -->
@@ -18,13 +18,8 @@
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
     />
 
-    <script
-      defer
-      src="https://kit.fontawesome.com/9daa42bcef.js"
-      crossorigin="anonymous"
-    ></script>
-
-    <link rel="stylesheet" href="./css/cart.css" />
+  
+    <link rel="stylesheet" href="cart.css" />
     <script src="cart.js" type="module" defer></script>
   </head>
 
@@ -32,52 +27,54 @@
     <!-- 헤더 -->
     <div id="header"></div>
 
-    <main role="main" id="mainWrap" class="container is-max-desktop">
-      <section class="title-sub mt-6">
-        <h2 class="title mb-6 has-text-grey-dark has-text-centered">
-          장바구니
-        </h2>
-        <div class="mb-4 is-flex is-justify-content-space-between">
-          <p class="subtitle">
-            총&nbsp;
-            <span id="countAllItem">3</span>
-            개
-          </p>
-          <button id="btnAllRemove" class="button is-info is-light">
-            전체삭제
-          </button>
-        </div>
-      </section>
+    <main role="main">
 
-      <section id="listItems"></section>
-      <section class="total mt-6">
-        <div class="is-flex is-justify-content-space-between">
-          <div class="block">
-            <h3 class="title is-4 has-text-grey-dark">
-              총액:&nbsp;<span id="priceTotal" class="has-text-danger"
-                >19,000</span
-              >&nbsp;원
-            </h3>
-            <p class="subtitle is-7"></p>
+      <section class="container">
+
+        <div class="cartWrap">
+          <h2 class="cartTitle">
+            장바구니
+          </h2>
+
+          <div class="countDelete"></div>
+
+          <section class="listItems"></section>
+          
+        </div>
+  
+        
+        <div class="total mt-6">
+          <div class="is-flex is-justify-content-space-between">
+            <div class="block">
+              <h3 class="title is-4 has-text-grey-dark">
+                총액:&nbsp;<span id="priceTotal" class="has-text-danger"
+                  >19,000</span
+                >&nbsp;원
+              </h3>
+              <p class="subtitle is-7"></p>
+            </div>
+            <a href="/order">
+              <button
+                id="btnPurchase"
+                class="button is-danger is-outlined px-6 py-5"
+              >
+                주문하기
+              </button>
+            </a>
           </div>
-          <a href="/order">
+          <a href="/">
             <button
-              id="btnPurchase"
-              class="button is-danger is-outlined px-6 py-5"
+              id="btnMoveToItemList"
+              class="button is-danger is-outlined mb-4 px-5"
             >
-              주문하기
+              더 구매하기
             </button>
           </a>
         </div>
-        <a href="/">
-          <button
-            id="btnMoveToItemList"
-            class="button is-danger is-outlined mb-4 px-5"
-          >
-            더 구매하기
-          </button>
-        </a>
+        
       </section>
+
+      
     </main>
 
     <!-- 푸터 -->
