--- a/src/views/components/footer.html
+++ b/src/views/components/footer.html
@@ -5,21 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>푸터</title>
 
-    <link
-        rel="icon"
-        type="image/png"
-        sizes="16x16"
-        href="../images/facon.ico"
-    />
-    
-    <link rel="stylesheet" type="style" href="../styles/reset.css">
-
-    <!-- 폰트 어썸 => 컴포넌트를 랜더링 할 때 script를 못 불러옴 -->
-    <script
-      defer
-      src="https://kit.fontawesome.com/9daa42bcef.js"
-      crossorigin="anonymous"
-    ></script>
+    <link rel="stylesheet" type="style" href="/styles/reset.css">
 
     <style>
     /* 푸터 */
