--- a/src/views/components/header.html
+++ b/src/views/components/header.html
@@ -5,14 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>헤더</title>
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="../images/facon.ico"
-    />
-
-
     <style>
       /* 헤더 레이아웃 */
       #headerWrap {
@@ -76,6 +68,7 @@
 
       .gnb ul li{
         cursor: pointer;
+        font-weight: 600;
 
       }
 
