Style: order-result.html

--- a/src/views/account/account.html
+++ b/src/views/account/account.html
@@ -42,7 +42,7 @@
             <p class="ftSerif">세상에 하나뿐인 추억을 선물하세요</p>
           </aside>
           <ul>
-            <li class="img1"><a href="/order-view">주문 목록</a></li>
+            <li class="img1"><a href="/order-result">주문 목록</a></li>
             <li class="img2"><a href="/cart">장바구니</a></li>
             <!-- 개인 정보 페이지 접근 요청 시 비밀번호 확인하는 기능 추가 필요 -->
             <li class="img3"><a href="/info">개인 정보</a></li>
