--- a/src/views/order-result/order-result.html
+++ b/src/views/order-result/order-result.html
@@ -20,8 +20,8 @@
     ></script>  
 
     <!-- 커스텀 css, js -->
-    <link rel="stylesheet" href="order-view.css" />
-    <script src="order-view.js" type="module" defer></script>
+    <link rel="stylesheet" href="order-result.css" />
+    <script src="order-result.js" type="module" defer></script>
   </head>
   <body>
     <!-- 헤더 -->
