--- a/src/views/about-co/about-co.html
+++ b/src/views/about-co/about-co.html
@@ -42,7 +42,35 @@
         <p class="line"></p>
       </section>
 
-      <section class="description ftSerif">칠월칠석에서 시작한</section>
+      <section class="description ftSerif">
+        <div class="subtitle">
+          'ojakkyu'는 칠월칠석에서 두 사람을 연결해주는 오작교에서 <br />
+          시작된 이름입니다.
+        </div>
+
+        <div class="contents">
+          <div class="contentsIn">
+            <div class="topContents">
+              안녕하세요. <br />
+              브랜드 오작뀨입니다. 이렇게 인사를 드리게되어 영광입니다.
+              <br /><br />
+
+              오작뀨는 인연을 연결하는 다리에서 유래하여 <br />
+              연인뿐만 아니라 친구, 가족 모든 사람의 연결고리가 되고자 합니다.
+            </div>
+            <div class="bottomContents">
+              행복, 용기, 건강, 성공 <br /><br />
+
+              오작뀨에서는 아름다운 꽃말만큼이나 <br />
+              다양한 의미를 지닌 '열두달의 이야기 시리즈'를<br />
+              만나보실 수 있습니다. <br /><br />
+
+              늘 함께 할 수 있는 반지, 팔찌, 목걸이를 <br />
+              소중한 사람에게 선물해 주세요.
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- 푸터 -->
     <div id="footer"></div>
