--- a/src/views/about-co/about-co.html
+++ b/src/views/about-co/about-co.html
@@ -44,7 +44,7 @@
 
       <section class="description ftSerif">
         <div class="subtitle">
-          'ojakkyu'는 칠월칠석에서 두 사람을 연결해주는 오작교에서 <br />
+          'ojakkyu'는 칠월칠석일에 두 사람을 연결해주는 오작교에서 <br />
           시작된 이름입니다.
         </div>
 
