--- a/src/views/order-result/order-result.html
+++ b/src/views/order-result/order-result.html
@@ -37,15 +37,8 @@
             <li class="subtitle3">상태</li>
             <li class="subtitle4">신청</li>
           </ul>
-          <form class="formWrap" id="registerUserForm">
-            <ul class="orderList">
-              <li class="subList1">2022-11-02</li>
-              <li class="subList2">여성 청바지 / 1개</li>
-              <li class="subList3">상품 준비중</li>
-              <li class="subList4">
-                <button class="submitBtn" id="submitButton">주문취소</button>
-              </li>
-            </ul>
+          <form class="formWrap" id="checkUserOrder">
+
           </form>
         </div>
     </main>
