--- a/src/views/order-result/order-result.css
+++ b/src/views/order-result/order-result.css
@@ -49,12 +49,12 @@
   border-bottom: 1px solid rgb(55, 72, 119);
 }
 
-.submitBtn:active {
+.deleteButton:active {
   color: black;
   background-color: #fff;
   border: 2px solid rgb(30, 38, 59);
 }
-.submitBtn {
+.deleteButton {
   border: none;
   border-radius: 5px;
   padding: 6px 2px;
