--- a/src/views/about-co/about-co.css
+++ b/src/views/about-co/about-co.css
@@ -10,25 +10,25 @@ body {
 }
 
 .title {
-  padding-top: 160px;
+  padding-top: 110px;
   margin: 0 auto 10px auto;
   max-width: 1105px;
 
   font-weight: bold;
-  color: rgba(70, 30, 105, 0.4);
-  text-shadow: 1px 1px 1px rgb(165, 165, 165);
 
   background-image: url(https://images.unsplash.com/photo-1587593692659-38c32c496642?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzZ8fGpld2Vscnl8ZW58MHx8MHx8&auto=format&fit=crop&w=400&q=60);
   background-size: contain;
-
   position: relative;
 }
 
 h2 {
-  padding-top: 60px;
+  opacity: 0.8;
+  padding-top: 28px;
   margin-bottom: 10px;
 
   font-size: 4em;
+  color: #e9b7b8;
+  text-shadow: 1px 1px 1px #dbd0c2;
 
   position: absolute;
   top: -10px;
@@ -65,7 +65,7 @@ h2 {
 .contents {
   margin-bottom: 100px;
   max-width: 800px;
-  height: 400px;
+  height: 550px;
 
   color: rgb(109, 99, 85);
   font-size: 1.2em;
@@ -77,7 +77,7 @@ h2 {
 
 .contentsIn {
   max-width: 800px;
-  height: 600px;
+  height: 400px;
 
   position: absolute;
   left: 50%;
@@ -85,19 +85,19 @@ h2 {
 
   animation-name: moveUp;
   animation-timing-function: linear;
-  animation-iteration-count: infinite;
-  animation-duration: 20s;
+  /* animation-iteration-count: infinite; */
+  animation-duration: 4s;
 }
 
-@keyframes moveUp {
+/* @keyframes moveUp {
   0% {
     top: 120%;
   }
 
   100% {
-    top: -200%;
+    top: 0;
   }
-}
+} */
 
 .topContents {
   margin-bottom: 60px;
