--- a/src/views/about-co/about-co.css
+++ b/src/views/about-co/about-co.css
@@ -7,6 +7,8 @@
 
 body {
   text-align: center;
+  background-image: url(https://images.unsplash.com/photo-1608508644127-ba99d7732fee?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=765&q=80);
+  background-size: cover;
 }
 
 .title {
@@ -15,20 +17,19 @@ body {
   max-width: 1105px;
 
   font-weight: bold;
+  text-shadow: 1px 1px 1px gray;
 
-  background-image: url(https://images.unsplash.com/photo-1587593692659-38c32c496642?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzZ8fGpld2Vscnl8ZW58MHx8MHx8&auto=format&fit=crop&w=400&q=60);
-  background-size: contain;
   position: relative;
 }
 
 h2 {
-  opacity: 0.8;
+  /* opacity: 0.8; */
   padding-top: 28px;
   margin-bottom: 10px;
 
   font-size: 4em;
   color: #e9b7b8;
-  text-shadow: 1px 1px 1px #dbd0c2;
+  text-shadow: 1px 1px 1px white;
 
   position: absolute;
   top: -10px;
@@ -46,7 +47,7 @@ h2 {
 
   height: 1px;
   width: 100px;
-  background-color: rgba(70, 30, 105, 0.4);
+  background-color: #e9b7b8;
 }
 
 .description {
@@ -59,7 +60,7 @@ h2 {
   margin-bottom: 40px;
 
   color: white;
-  text-shadow: 1px 1px 1px rgb(165, 165, 165);
+  text-shadow: 1px 1px 1px gray;
 }
 
 .contents {
@@ -85,19 +86,8 @@ h2 {
 
   animation-name: moveUp;
   animation-timing-function: linear;
-  /* animation-iteration-count: infinite; */
   animation-duration: 4s;
 }
-
-/* @keyframes moveUp {
-  0% {
-    top: 120%;
-  }
-
-  100% {
-    top: 0;
-  }
-} */
 
 .topContents {
   margin-bottom: 60px;
