--- a/src/views/about-co/about-co.html
+++ b/src/views/about-co/about-co.html
@@ -38,15 +38,15 @@
     <main role="main" id="mainWrap" class="">
       <section class="title ftSerif">
         <h2>About ojakkyu</h2>
-        <p class="design">열두달 이야기</p>
-        <p class="line"></p>
+        <!-- <p class="line"></p> -->
+        <!-- <p class="design">열두달 이야기</p> -->
       </section>
 
       <section class="description ftSerif">
-        <div class="subtitle">
-          'ojakkyu'는 칠월칠석일에 두 사람을 연결해주는 오작교에서 <br />
-          시작된 이름입니다.
-        </div>
+        <!-- <div class="subtitle">
+          'ojakkyu'는 칠월칠석일에 두 사람을 연결해주는 오작교에서 시작된
+          이름입니다.
+        </div> -->
 
         <div class="contents">
           <div class="contentsIn">
