--- a/src/views/about-co/about-co.css
+++ b/src/views/about-co/about-co.css
@@ -7,7 +7,7 @@
 
 body {
   text-align: center;
-  background-image: url(https://images.unsplash.com/photo-1608153917100-3bd2426fde7c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80);
+  background-image: url(https://plus.unsplash.com/premium_photo-1661440002597-21a6d30a88f0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
   background-size: cover;
 }
 
