--- a/src/views/birthstone/birthstone.html
+++ b/src/views/birthstone/birthstone.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>birthstone</title>
+    <title>탄생석</title>
 
     <!-- 아이콘 -->
     <link
@@ -188,7 +188,6 @@
         <div class="slider__indicators"></div>
       </div>
     </main>
-
   </body>
   <script>
     //slides
