Update: 주문 로직 개선

--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -17,7 +17,28 @@
       <article class="detailWrap">
         <div class="productImg"></div>
 
-        <div class="productDetail"></div>
+        <div>
+          <div class="productDetail"></div>
+          <li>
+            <figuare class="routeBtn">
+              <button type="button" id="purchaseButton" class="moveOrder">
+                구매하기
+              </button>
+              <button type="button" id="adCartButton" class="moveCart">
+                장바구니
+              </button>
+              <button type="button">관심상품</button>
+              <button
+                type="button"
+                id="editProductButton"
+                class="editProduct"
+                data-id="${id}"
+              >
+                상품수정
+              </button>
+            </figuare>
+          </li>
+        </div>
       </article>
     </section>
 
